Question detail design spacing fixed

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/typography.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/typography.less
@@ -10,6 +10,7 @@ h1 {
     font-weight: 700;
     line-height: 27.5px;
     margin-bottom: 10px;
+    margin-top:0;
     color: rgb(51,51,51);
 }
 
