--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.css
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.css
@@ -22,7 +22,10 @@
 }
 
 .read-question-button {
-    margin-bottom:20px;
+    margin-bottom: 20px;
+    background-color: #f6f6f6;
+    padding: 10px;
+    font-family:
 }
 .img-category {
     width :50px;
