--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/user-info/user-info.component.css
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/user-info/user-info.component.css
@@ -1,6 +1,6 @@
 ﻿.user-info {
     padding-top: 15px;
-    padding-left:10px;
+    padding-left:15px;
     float: left;
     display: block;
 }
